Frontend looking good for current dates at least

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,25 @@
 <div class="content">
     <h1>Snapshot Service</h1>
 
-    <h2>Download</h2>
+    <h2>Select a Date</h2>
 
     <div id="archive"> </div>
 
-    <button onclick="downloadDate()">Download This Date</button>
+    <h2>Get the Snapshot</h2>
+
+    <h3>Download Full Snapshot</h3>
+    <button onclick="downloadDate()">Download</button>
+
+    <!--IMMEDIATE SCREENSHOT UI COMING AFTER FUNCTIONALITY>h3>Download Page Screenshot</h3>
+    <select id="pages">
+        <option value="penta">Penta</option>
+        <option value="home">Home</option>
+        <option value="market-data">Market Data</option>
+        <option value="advisor-center">Advisor Center</option>
+    </select>
+
+    <button onclick="downloadScreenshot()">Download</button-->
+
 </div>
 
 <script src="main.js"></script>
