--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,9 @@
         <h2>Get the Snapshot</h2>
 
         <div class="flex-container">
-            <div style="flex-grow: 1;">
+            <div style="flex-grow: 1; margin-right:10px;">
                 <h3>Download Full Snapshot</h3>
-                <button onclick="downloadDate()">Download</button>
+                <button class="download" style="width:100%;" onclick="downloadDate()">Download</button>
             </div>
 
             <div style="flex-grow: 1;">
@@ -65,7 +65,7 @@
                         <option value="12u">12u</option>
                         <option value="16u">16u</option>
                     </select>
-                    <button onclick="downloadScreenshot()" style="flex-grow: 2; ">Download</button-->
+                    <button class="download" onclick="downloadScreenshot()" style="flex-grow: 2; ">Download</button-->
                 </div>
             </div>
 
