Centered select drop downs for the viewshot

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                         <option value="12u">12u</option>
                         <option value="16u">16u</option>
                     </select>
-                    <button class="download" onclick="downloadScreenshot()" style="flex-grow: 2; ">Download</button-->
+                    <button class="download" onclick="downloadScreenshot()" style="flex-grow: 2; ">Download</button>
                 </div>
             </div>
 
