Adding jquery to what gets copied to dist, more self-sufficient

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Snapshots</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"></script>
+    <script src="dist/jquery.slim.min.js"></script>
 
     <script src="dist/js/datepicker.min.js"></script>
     <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css"> 
