Better linking to files?

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
     <title>Snapshots</title>
-    <script src="dist/jquery.slim.min.js"></script>
+    <script src="/dist/jquery.slim.min.js"></script>
 
-    <script src="dist/js/datepicker.min.js"></script>
-    <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css"> 
+    <script src="/dist/js/datepicker.min.js"></script>
+    <link href="/dist/css/datepicker.min.css" rel="stylesheet" type="text/css"> 
     <!-- Include English language -->
-    <script src="dist/js/i18n/datepicker.en.js"></script>
+    <script src="/dist/js/i18n/datepicker.en.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" type="text/css"> 
 
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
 </head>
 
 <body>
