Dropdowns now change on new products

--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,10 @@
 
                 <div class="flex-container">
                     <select id="pages" class="smooth-fade">
+                        <option value="homepage">Homepage</option>
                         <option value="penta">Penta</option>
-                        <option value="home">Home</option>
-                        <option value="market-data">Market Data</option>
-                        <option value="advisor-center">Advisor Center</option>
+                        <option value="market-data">Market-Data</option>
+                        <option value="advisorcenter">Advisorcenter</option>
                     </select>
                     <select id="breakpoints" class="smooth-fade">
                         <option value="4u">4u</option>
