Padding on product buttons is much better

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
 <body class="smooth-fade">
     <div class="content">
-        <h1>Snapshot Service</h1>
+        <h1>Snapshots</h1>
 
         <h2>Select a Date</h2>
 
